--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <tr>
             <th>Rank</th>
         <th>Team Name</th>
-        <th>Affiliation</th>
+<!--        <th>Affiliation</th>-->
         <th>Attempt</th>
         <th>Score</th>
         </tr>
@@ -191,42 +191,42 @@
         <tr>
       <td>1</td>
       <td>KnowComp</td>
-      <td>The Hong Kong University of Science and Technology</td>
+<!--      <td>The Hong Kong University of Science and Technology</td>-->
       <td>4</td>
       <td>0.8647</td>
     </tr>
     <tr>
       <td>2</td>
       <td>Semantists</td>
-      <td>Institute for Infocomm Research, A*STAR</td>
+<!--      <td>Institute for Infocomm Research, A*STAR</td>-->
         <td>4</td>
       <td>0.8506</td>
     </tr>
     <tr>
       <td>3</td>
       <td>Mohammad Soltani</td>
-      <td>Heinrich Heine University</td>
+<!--      <td>Heinrich Heine University</td>-->
       <td>2</td>
       <td>0.8273</td>
     </tr>
     <tr>
       <td>4</td>
       <td>Pitt Pixel Persuaders</td>
-      <td>University of Pittsburgh</td>
+<!--      <td>University of Pittsburgh</td>-->
       <td>2</td>
       <td>0.8168</td>
     </tr>
     <tr>
       <td>5</td>
       <td>GC-HUNTER</td>
-      <td>Graduate Center, Hunter College, CUNY</td>
+<!--      <td>Graduate Center, Hunter College, CUNY</td>-->
       <td>2</td>
       <td>0.8049</td>
     </tr>
     <tr>
       <td>6</td>
       <td>IUST</td>
-      <td>Iran University of Science and Technology</td>
+<!--      <td>Iran University of Science and Technology</td>-->
       <td>1</td>
       <td>0.7754</td>
     </tr>
@@ -240,14 +240,14 @@
     <tr>
       <td>8</td>
       <td>ACT-CS</td>
-      <td>Emory University</td>
+<!--      <td>Emory University</td>-->
       <td>4</td>
       <td>0.6325</td>
     </tr>
     <tr>
       <td>9</td>
       <td>feeds</td>
-      <td>Bauhaus-Universität Weimar</td>
+<!--      <td>Bauhaus-Universität Weimar</td>-->
       <td>1</td>
       <td>0.4418</td>
     </tr>
@@ -279,7 +279,7 @@
         <tr>
             <th>Rank</th>
         <th>Team Name</th>
-        <th>Affiliation</th>
+<!--        <th>Affiliation</th>-->
         <th>Attempt</th>
         <th>Score</th>
         </tr>
@@ -288,63 +288,63 @@
         <tr>
       <td>1</td>
       <td>feeds</td>
-      <td>Bauhaus-Universität Weimar</td>
+<!--      <td>Bauhaus-Universität Weimar</td>-->
       <td>1</td>
       <td>0.5561</td>
     </tr>
     <tr>
       <td>2</td>
       <td>KPAS</td>
-      <td>Optum</td>
+<!--      <td>Optum</td>-->
       <td>1</td>
       <td>0.5417</td>
     </tr>
     <tr>
       <td>3</td>
       <td>Mohammad Soltani</td>
-      <td>Heinrich Heine University</td>
+<!--      <td>Heinrich Heine University</td>-->
       <td>5</td>
       <td>0.5281</td>
     </tr>
     <tr>
       <td>4</td>
       <td>Semantists</td>
-      <td>Institute for Infocomm Research, A*STAR</td>
+<!--      <td>Institute for Infocomm Research, A*STAR</td>-->
       <td>1</td>
       <td>0.5045</td>
     </tr>
     <tr>
       <td>5</td>
       <td>ACT-CS</td>
-      <td>Emory University</td>
+<!--      <td>Emory University</td>-->
       <td>1</td>
       <td>0.5000</td>
     </tr>
     <tr>
       <td>6</td>
       <td>IUST</td>
-      <td>Iran University of Science and Technology</td>
+<!--      <td>Iran University of Science and Technology</td>-->
       <td>1</td>
       <td>0.4609</td>
     </tr>
     <tr>
       <td>7</td>
       <td>KnowComp</td>
-      <td>The Hong Kong University of Science and Technology</td>
+<!--      <td>The Hong Kong University of Science and Technology</td>-->
       <td>1</td>
       <td>0.3922</td>
     </tr>
     <tr>
       <td>8</td>
       <td>GC-HUNTER</td>
-      <td>Graduate Center, Hunter College, CUNY</td>
+<!--      <td>Graduate Center, Hunter College, CUNY</td>-->
       <td>1</td>
       <td>0.3832</td>
     </tr>
     <tr>
       <td>9</td>
       <td>Pitt Pixel Persuaders</td>
-      <td>University of Pittsburgh</td>
+<!--      <td>University of Pittsburgh</td>-->
       <td>1</td>
       <td>0.1217</td>
     </tr>
