--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
     <tr>
       <td>7</td>
       <td>KPAS</td>
-      <td>Optum</td>
+<!--      <td>Optum</td>-->
       <td>1</td>
       <td>0.7097</td>
     </tr>
