--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
         }
     th, td {
         /*border: 1px solid #ddd;*/
-        padding: 3.5px;
-        /*text-align: center;*/
+        padding: 8px;
+        text-align: center;
         }
     </style>
 </head>
@@ -133,7 +133,7 @@
 
         To participate, please fill in this <a
                 href="Invalid">registration
-            form(Invalid)</a> and feel free to join <a
+            form (Closed)</a> and feel free to join <a
                 href="https://join.slack.com/t/imagearg/shared_invite/zt-1ss5hdb6d-eNCaWOAEe4O_8UE1gQxIxA">ImageArg
             Slack</a> for conversations.</p>
 
@@ -182,7 +182,6 @@
         <tr>
             <th>Rank</th>
         <th>Team Name</th>
-<!--        <th>Affiliation</th>-->
         <th>Attempt</th>
         <th>Score</th>
         </tr>
@@ -191,69 +190,192 @@
         <tr>
       <td>1</td>
       <td>KnowComp</td>
-<!--      <td>The Hong Kong University of Science and Technology</td>-->
       <td>4</td>
       <td>0.8647</td>
     </tr>
     <tr>
       <td>2</td>
-      <td>Semantists</td>
-<!--      <td>Institute for Infocomm Research, A*STAR</td>-->
-        <td>4</td>
-      <td>0.8506</td>
+      <td>KnowComp</td>
+      <td>5</td>
+      <td>0.8571</td>
     </tr>
     <tr>
       <td>3</td>
+      <td>KnowComp</td>
+      <td>1</td>
+      <td>0.8528</td>
+    </tr>
+    <tr>
+      <td>4</td>
+      <td>Semantists</td>
+      <td>4</td>
+      <td>0.8506</td>
+    </tr>
+    <tr>
+      <td>5</td>
+      <td>Semantists</td>
+      <td>3</td>
+      <td>0.8462</td>
+    </tr>
+    <tr>
+      <td>6</td>
+      <td>Semantists</td>
+      <td>5</td>
+      <td>0.8417</td>
+    </tr>
+    <tr>
+      <td>7</td>
+      <td>KnowComp</td>
+      <td>2</td>
+      <td>0.8365</td>
+    </tr>
+    <tr>
+      <td>8</td>
+      <td>Semantists</td>
+      <td>1</td>
+      <td>0.8365</td>
+    </tr>
+    <tr>
+      <td>9</td>
+      <td>Semantists</td>
+      <td>2</td>
+      <td>0.8365</td>
+    </tr>
+    <tr>
+      <td>10</td>
+      <td>KnowComp</td>
+      <td>3</td>
+      <td>0.8346</td>
+    </tr>
+    <tr>
+      <td>11</td>
       <td>Mohammad Soltani</td>
-<!--      <td>Heinrich Heine University</td>-->
       <td>2</td>
       <td>0.8273</td>
     </tr>
     <tr>
-      <td>4</td>
+      <td>12</td>
       <td>Pitt Pixel Persuaders</td>
-<!--      <td>University of Pittsburgh</td>-->
       <td>2</td>
       <td>0.8168</td>
     </tr>
     <tr>
-      <td>5</td>
+      <td>13</td>
+      <td>Mohammad Soltani</td>
+      <td>1</td>
+      <td>0.8142</td>
+    </tr>
+    <tr>
+      <td>14</td>
+      <td>Mohammad Soltani</td>
+      <td>4</td>
+      <td>0.8093</td>
+    </tr>
+    <tr>
+      <td>15</td>
       <td>GC-HUNTER</td>
-<!--      <td>Graduate Center, Hunter College, CUNY</td>-->
       <td>2</td>
       <td>0.8049</td>
     </tr>
     <tr>
-      <td>6</td>
+      <td>16</td>
+      <td>Mohammad Soltani</td>
+      <td>3</td>
+      <td>0.8000</td>
+    </tr>
+    <tr>
+      <td>17</td>
+      <td>Pitt Pixel Persuaders</td>
+      <td>1</td>
+      <td>0.7910</td>
+    </tr>
+    <tr>
+      <td>18</td>
+      <td>Mohammad Soltani</td>
+      <td>5</td>
+      <td>0.7782</td>
+    </tr>
+    <tr>
+      <td>19</td>
+      <td>GC-HUNTER</td>
+      <td>1</td>
+      <td>0.7766</td>
+    </tr>
+    <tr>
+      <td>20</td>
       <td>IUST</td>
-<!--      <td>Iran University of Science and Technology</td>-->
       <td>1</td>
       <td>0.7754</td>
     </tr>
     <tr>
-      <td>7</td>
+      <td>21</td>
+      <td>IUST</td>
+      <td>2</td>
+      <td>0.7752</td>
+    </tr>
+    <tr>
+      <td>22</td>
+      <td>Pitt Pixel Persuaders</td>
+      <td>4</td>
+      <td>0.7710</td>
+    </tr>
+    <tr>
+      <td>23</td>
+      <td>Pitt Pixel Persuaders</td>
+      <td>5</td>
+      <td>0.7415</td>
+    </tr>
+    <tr>
+      <td>24</td>
       <td>KPAS</td>
-<!--      <td>Optum</td>-->
       <td>1</td>
       <td>0.7097</td>
     </tr>
     <tr>
-      <td>8</td>
+      <td>25</td>
       <td>ACT-CS</td>
-<!--      <td>Emory University</td>-->
       <td>4</td>
       <td>0.6325</td>
     </tr>
     <tr>
-      <td>9</td>
+      <td>26</td>
+      <td>ACT-CS</td>
+      <td>3</td>
+      <td>0.6178</td>
+    </tr>
+    <tr>
+      <td>27</td>
+      <td>ACT-CS</td>
+      <td>2</td>
+      <td>0.6116</td>
+    </tr>
+    <tr>
+      <td>28</td>
+      <td>ACT-CS</td>
+      <td>1</td>
+      <td>0.5863</td>
+    </tr>
+    <tr>
+      <td>29</td>
+      <td>IUST</td>
+      <td>3</td>
+      <td>0.5680</td>
+    </tr>
+    <tr>
+      <td>30</td>
+      <td>Pitt Pixel Persuaders</td>
+      <td>3</td>
+      <td>0.5285</td>
+    </tr>
+    <tr>
+      <td>31</td>
       <td>feeds</td>
-<!--      <td>Bauhaus-Universität Weimar</td>-->
       <td>1</td>
       <td>0.4418</td>
     </tr>
 
     </table>
-        Note: Attempt denotes the best submission attempt; Score denotes F1-score.
+        Note: Attempt denotes submission attempt number; Score denotes F1-score. The best submission attempt from each team will be used for final ranking.
 
         <p></p>
 
@@ -274,12 +396,11 @@
             rate in major U.S. cities due to restrict gun control laws, so citizens cannot easily arm themselves.</p>
 
         <h4>Subtask B (IP Classification) Leaderboard</h4>
-        <table style="align-content: center">
+        <table>
     <thead>
         <tr>
             <th>Rank</th>
         <th>Team Name</th>
-<!--        <th>Affiliation</th>-->
         <th>Attempt</th>
         <th>Score</th>
         </tr>
@@ -288,69 +409,132 @@
         <tr>
       <td>1</td>
       <td>feeds</td>
-<!--      <td>Bauhaus-Universität Weimar</td>-->
       <td>1</td>
       <td>0.5561</td>
     </tr>
     <tr>
       <td>2</td>
       <td>KPAS</td>
-<!--      <td>Optum</td>-->
       <td>1</td>
       <td>0.5417</td>
     </tr>
     <tr>
       <td>3</td>
+      <td>feeds</td>
+      <td>2</td>
+      <td>0.5392</td>
+    </tr>
+    <tr>
+      <td>4</td>
       <td>Mohammad Soltani</td>
-<!--      <td>Heinrich Heine University</td>-->
       <td>5</td>
       <td>0.5281</td>
     </tr>
     <tr>
-      <td>4</td>
+      <td>5</td>
       <td>Semantists</td>
-<!--      <td>Institute for Infocomm Research, A*STAR</td>-->
       <td>1</td>
       <td>0.5045</td>
     </tr>
     <tr>
-      <td>5</td>
+      <td>6</td>
       <td>ACT-CS</td>
-<!--      <td>Emory University</td>-->
       <td>1</td>
       <td>0.5000</td>
     </tr>
     <tr>
-      <td>6</td>
+      <td>7</td>
+      <td>Mohammad Soltani</td>
+      <td>1</td>
+      <td>0.4875</td>
+    </tr>
+    <tr>
+      <td>8</td>
+      <td>Mohammad Soltani</td>
+      <td>4</td>
+      <td>0.4778</td>
+    </tr>
+    <tr>
+      <td>9</td>
+      <td>Mohammad Soltani</td>
+      <td>3</td>
+      <td>0.4762</td>
+    </tr>
+    <tr>
+      <td>10</td>
+      <td>Semantists</td>
+      <td>5</td>
+      <td>0.4659</td>
+    </tr>
+    <tr>
+      <td>11</td>
       <td>IUST</td>
-<!--      <td>Iran University of Science and Technology</td>-->
       <td>1</td>
       <td>0.4609</td>
     </tr>
     <tr>
-      <td>7</td>
+      <td>12</td>
+      <td>Mohammad Soltani</td>
+      <td>2</td>
+      <td>0.4545</td>
+    </tr>
+    <tr>
+      <td>13</td>
+      <td>ACT-CS</td>
+      <td>4</td>
+      <td>0.4432</td>
+    </tr>
+    <tr>
+      <td>14</td>
+      <td>ACT-CS</td>
+      <td>3</td>
+      <td>0.4348</td>
+    </tr>
+    <tr>
+      <td>15</td>
+      <td>Semantists</td>
+      <td>4</td>
+      <td>0.4222</td>
+    </tr>
+    <tr>
+      <td>16</td>
+      <td>Semantists</td>
+      <td>2</td>
+      <td>0.4141</td>
+    </tr>
+    <tr>
+      <td>17</td>
       <td>KnowComp</td>
-<!--      <td>The Hong Kong University of Science and Technology</td>-->
       <td>1</td>
       <td>0.3922</td>
     </tr>
     <tr>
-      <td>8</td>
+      <td>18</td>
       <td>GC-HUNTER</td>
-<!--      <td>Graduate Center, Hunter College, CUNY</td>-->
       <td>1</td>
       <td>0.3832</td>
     </tr>
     <tr>
-      <td>9</td>
+      <td>19</td>
+      <td>ACT-CS</td>
+      <td>2</td>
+      <td>0.3125</td>
+    </tr>
+    <tr>
+      <td>20</td>
+      <td>Semantists</td>
+      <td>3</td>
+      <td>0.2838</td>
+    </tr>
+    <tr>
+      <td>21</td>
       <td>Pitt Pixel Persuaders</td>
-<!--      <td>University of Pittsburgh</td>-->
       <td>1</td>
       <td>0.1217</td>
     </tr>
 
     </table>
-        Note: Attempt denotes the best submission attempt; Score denotes F1-score.
+        Note: Attempt denotes submission attempt number; Score denotes F1-score. The best submission attempt from each team will be used for final ranking.
         <br><br>
         <hr>
         <h2 id="scripts to download the data"> 2. Dataset and Shared Task Submission</h2>
