--- a/index.html
+++ b/index.html
@@ -187,11 +187,11 @@
         </tr>
     </thead>
     <tbody>
-        <tr>
+        <tr style="font-weight: normal">
       <td>1</td>
       <td>KnowComp</td>
       <td>4</td>
-      <td>0.8647</td>
+      <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 0.8647 &nbsp;&nbsp;&starf;</td>
     </tr>
     <tr>
       <td>2</td>
@@ -205,11 +205,11 @@
       <td>1</td>
       <td>0.8528</td>
     </tr>
-    <tr>
+    <tr style="font-weight: normal">
       <td>4</td>
       <td>Semantists</td>
       <td>4</td>
-      <td>0.8506</td>
+      <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 0.8506 &nbsp;&nbsp;&starf;</td>
     </tr>
     <tr>
       <td>5</td>
@@ -247,17 +247,17 @@
       <td>3</td>
       <td>0.8346</td>
     </tr>
-    <tr>
+    <tr style="font-weight: normal">
       <td>11</td>
       <td>Mohammad Soltani</td>
       <td>2</td>
-      <td>0.8273</td>
+      <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 0.8273 &nbsp;&nbsp;&starf;</td>
     </tr>
-    <tr>
+    <tr style="font-weight: normal">
       <td>12</td>
       <td>Pitt Pixel Persuaders</td>
       <td>2</td>
-      <td>0.8168</td>
+      <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 0.8168 &nbsp;&nbsp;&starf;</td>
     </tr>
     <tr>
       <td>13</td>
@@ -271,11 +271,11 @@
       <td>4</td>
       <td>0.8093</td>
     </tr>
-    <tr>
+    <tr style="font-weight: normal">
       <td>15</td>
       <td>GC-HUNTER</td>
       <td>2</td>
-      <td>0.8049</td>
+      <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 0.8049 &nbsp;&nbsp;&starf;</td>
     </tr>
     <tr>
       <td>16</td>
@@ -301,11 +301,11 @@
       <td>1</td>
       <td>0.7766</td>
     </tr>
-    <tr>
+    <tr style="font-weight: normal">
       <td>20</td>
       <td>IUST</td>
       <td>1</td>
-      <td>0.7754</td>
+      <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 0.7754 &nbsp;&nbsp;&starf;</td>
     </tr>
     <tr>
       <td>21</td>
@@ -325,17 +325,17 @@
       <td>5</td>
       <td>0.7415</td>
     </tr>
-    <tr>
+    <tr style="font-weight: normal">
       <td>24</td>
       <td>KPAS</td>
       <td>1</td>
-      <td>0.7097</td>
+      <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 0.7097 &nbsp;&nbsp;&starf;</td>
     </tr>
-    <tr>
+    <tr style="font-weight: normal">
       <td>25</td>
       <td>ACT-CS</td>
       <td>4</td>
-      <td>0.6325</td>
+      <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 0.6325 &nbsp;&nbsp;&starf;</td>
     </tr>
     <tr>
       <td>26</td>
@@ -367,15 +367,15 @@
       <td>3</td>
       <td>0.5285</td>
     </tr>
-    <tr>
+    <tr style="font-weight: normal">
       <td>31</td>
       <td>feeds</td>
       <td>1</td>
-      <td>0.4418</td>
+      <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 0.4418 &nbsp;&nbsp;&starf;</td>
     </tr>
 
     </table>
-        Note: Attempt denotes submission attempt number; Score denotes F1-score. The best submission attempt from each team will be used for final ranking.
+        Note: Attempt denotes submission attempt number; Score denotes F1-score. The best submission attempt from each team is labeled with a star (&starf;) and will be used for final ranking.
 
         <p></p>
 
@@ -406,17 +406,17 @@
         </tr>
     </thead>
     <tbody>
-        <tr>
+        <tr style="font-weight: normal">
       <td>1</td>
       <td>feeds</td>
       <td>1</td>
-      <td>0.5561</td>
+      <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 0.5561 &nbsp;&nbsp;&starf;</td>
     </tr>
-    <tr>
+    <tr style="font-weight: normal">
       <td>2</td>
       <td>KPAS</td>
       <td>1</td>
-      <td>0.5417</td>
+      <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 0.5417 &nbsp;&nbsp;&starf;</td>
     </tr>
     <tr>
       <td>3</td>
@@ -424,23 +424,23 @@
       <td>2</td>
       <td>0.5392</td>
     </tr>
-    <tr>
+    <tr style="font-weight: normal">
       <td>4</td>
       <td>Mohammad Soltani</td>
       <td>5</td>
-      <td>0.5281</td>
+      <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 0.5281 &nbsp;&nbsp;&starf;</td>
     </tr>
-    <tr>
+    <tr style="font-weight: normal">
       <td>5</td>
       <td>Semantists</td>
       <td>1</td>
-      <td>0.5045</td>
+      <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 0.5045 &nbsp;&nbsp;&starf;</td>
     </tr>
-    <tr>
+    <tr style="font-weight: normal">
       <td>6</td>
       <td>ACT-CS</td>
       <td>1</td>
-      <td>0.5000</td>
+      <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 0.5000 &nbsp;&nbsp;&starf;</td>
     </tr>
     <tr>
       <td>7</td>
@@ -466,11 +466,11 @@
       <td>5</td>
       <td>0.4659</td>
     </tr>
-    <tr>
+    <tr style="font-weight: normal">
       <td>11</td>
       <td>IUST</td>
       <td>1</td>
-      <td>0.4609</td>
+      <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 0.4609 &nbsp;&nbsp;&starf;</td>
     </tr>
     <tr>
       <td>12</td>
@@ -502,17 +502,17 @@
       <td>2</td>
       <td>0.4141</td>
     </tr>
-    <tr>
+    <tr style="font-weight: normal">
       <td>17</td>
       <td>KnowComp</td>
       <td>1</td>
-      <td>0.3922</td>
+      <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 0.3922 &nbsp;&nbsp;&starf;</td>
     </tr>
-    <tr>
+    <tr style="font-weight: normal">
       <td>18</td>
       <td>GC-HUNTER</td>
       <td>1</td>
-      <td>0.3832</td>
+      <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 0.3832 &nbsp;&nbsp;&starf;</td>
     </tr>
     <tr>
       <td>19</td>
@@ -526,15 +526,15 @@
       <td>3</td>
       <td>0.2838</td>
     </tr>
-    <tr>
+    <tr style="font-weight: normal">
       <td>21</td>
       <td>Pitt Pixel Persuaders</td>
       <td>1</td>
-      <td>0.1217</td>
+      <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 0.1217 &nbsp;&nbsp;&starf;</td>
     </tr>
 
     </table>
-        Note: Attempt denotes submission attempt number; Score denotes F1-score. The best submission attempt from each team will be used for final ranking.
+        Note: Attempt denotes submission attempt number; Score denotes F1-score. The best submission attempt from each team is labeled with a star (&starf;) and will be used for final ranking.
         <br><br>
         <hr>
         <h2 id="scripts to download the data"> 2. Dataset and Shared Task Submission</h2>
