--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             <th>Rank</th>
         <th>Team Name</th>
         <th>Attempt</th>
-        <th style="text-align: left;text-indent: 2em">Score</th>
+        <th style="text-align: left;text-indent: 1em">Score</th>
         </tr>
     </thead>
     <tbody>
@@ -191,187 +191,187 @@
       <td>1</td>
       <td>KnowComp</td>
       <td>4</td>
-      <td style="text-align: left;text-indent: 2em;">0.8647 &nbsp;&nbsp;&nbsp;&nbsp;&starf;</td>
+      <td style="text-align: left;text-indent: 1em;">0.8647 &nbsp;&nbsp;&nbsp;&starf;</td>
     </tr>
     <tr>
       <td>2</td>
       <td>KnowComp</td>
       <td>5</td>
-      <td style="text-align: left;text-indent: 2em">0.8571</td>
+      <td style="text-align: left;text-indent: 1em">0.8571</td>
     </tr>
     <tr>
       <td>3</td>
       <td>KnowComp</td>
       <td>1</td>
-      <td style="text-align: left;text-indent: 2em">0.8528</td>
+      <td style="text-align: left;text-indent: 1em">0.8528</td>
     </tr>
     <tr style="font-weight: normal">
       <td>4</td>
       <td>Semantists</td>
       <td>4</td>
-      <td style="text-align: left;text-indent: 2em">0.8506 &nbsp;&nbsp;&nbsp;&nbsp;&starf;</td>
+      <td style="text-align: left;text-indent: 1em">0.8506 &nbsp;&nbsp;&nbsp;&starf;</td>
     </tr>
     <tr>
       <td>5</td>
       <td>Semantists</td>
       <td>3</td>
-      <td style="text-align: left;text-indent: 2em">0.8462</td>
+      <td style="text-align: left;text-indent: 1em">0.8462</td>
     </tr>
     <tr>
       <td>6</td>
       <td>Semantists</td>
       <td>5</td>
-      <td style="text-align: left;text-indent: 2em">0.8417</td>
+      <td style="text-align: left;text-indent: 1em">0.8417</td>
     </tr>
     <tr>
       <td>7</td>
       <td>KnowComp</td>
       <td>2</td>
-      <td style="text-align: left;text-indent: 2em">0.8365</td>
+      <td style="text-align: left;text-indent: 1em">0.8365</td>
     </tr>
     <tr>
       <td>8</td>
       <td>Semantists</td>
       <td>1</td>
-      <td style="text-align: left;text-indent: 2em">0.8365</td>
+      <td style="text-align: left;text-indent: 1em">0.8365</td>
     </tr>
     <tr>
       <td>9</td>
       <td>Semantists</td>
       <td>2</td>
-      <td style="text-align: left;text-indent: 2em">0.8365</td>
+      <td style="text-align: left;text-indent: 1em">0.8365</td>
     </tr>
     <tr>
       <td>10</td>
       <td>KnowComp</td>
       <td>3</td>
-      <td style="text-align: left;text-indent: 2em">0.8346</td>
+      <td style="text-align: left;text-indent: 1em">0.8346</td>
     </tr>
     <tr style="font-weight: normal">
       <td>11</td>
       <td>Mohammad Soltani</td>
       <td>2</td>
-      <td style="text-align: left;text-indent: 2em">0.8273 &nbsp;&nbsp;&nbsp;&nbsp;&starf;</td>
+      <td style="text-align: left;text-indent: 1em">0.8273 &nbsp;&nbsp;&nbsp;&starf;</td>
     </tr>
     <tr style="font-weight: normal">
       <td>12</td>
       <td>Pitt Pixel Persuaders</td>
       <td>2</td>
-      <td style="text-align: left;text-indent: 2em">0.8168 &nbsp;&nbsp;&nbsp;&nbsp;&starf;</td>
+      <td style="text-align: left;text-indent: 1em">0.8168 &nbsp;&nbsp;&nbsp;&starf;</td>
     </tr>
     <tr>
       <td>13</td>
       <td>Mohammad Soltani</td>
       <td>1</td>
-      <td style="text-align: left;text-indent: 2em">0.8142</td>
+      <td style="text-align: left;text-indent: 1em">0.8142</td>
     </tr>
     <tr>
       <td>14</td>
       <td>Mohammad Soltani</td>
       <td>4</td>
-      <td style="text-align: left;text-indent: 2em">0.8093</td>
+      <td style="text-align: left;text-indent: 1em">0.8093</td>
     </tr>
     <tr style="font-weight: normal">
       <td>15</td>
       <td>GC-HUNTER</td>
       <td>2</td>
-      <td style="text-align: left;text-indent: 2em">0.8049 &nbsp;&nbsp;&nbsp;&nbsp;&starf;</td>
+      <td style="text-align: left;text-indent: 1em">0.8049 &nbsp;&nbsp;&nbsp;&starf;</td>
     </tr>
     <tr>
       <td>16</td>
       <td>Mohammad Soltani</td>
       <td>3</td>
-      <td style="text-align: left;text-indent: 2em">0.8000</td>
+      <td style="text-align: left;text-indent: 1em">0.8000</td>
     </tr>
     <tr>
       <td>17</td>
       <td>Pitt Pixel Persuaders</td>
       <td>1</td>
-      <td style="text-align: left;text-indent: 2em">0.7910</td>
+      <td style="text-align: left;text-indent: 1em">0.7910</td>
     </tr>
     <tr>
       <td>18</td>
       <td>Mohammad Soltani</td>
       <td>5</td>
-      <td style="text-align: left;text-indent: 2em">0.7782</td>
+      <td style="text-align: left;text-indent: 1em">0.7782</td>
     </tr>
     <tr>
       <td>19</td>
       <td>GC-HUNTER</td>
       <td>1</td>
-      <td style="text-align: left;text-indent: 2em">0.7766</td>
+      <td style="text-align: left;text-indent: 1em">0.7766</td>
     </tr>
     <tr style="font-weight: normal">
       <td>20</td>
       <td>IUST</td>
       <td>1</td>
-      <td style="text-align: left;text-indent: 2em">0.7754 &nbsp;&nbsp;&nbsp;&nbsp;&starf;</td>
+      <td style="text-align: left;text-indent: 1em">0.7754 &nbsp;&nbsp;&nbsp;&starf;</td>
     </tr>
     <tr>
       <td>21</td>
       <td>IUST</td>
       <td>2</td>
-      <td style="text-align: left;text-indent: 2em">0.7752</td>
+      <td style="text-align: left;text-indent: 1em">0.7752</td>
     </tr>
     <tr>
       <td>22</td>
       <td>Pitt Pixel Persuaders</td>
       <td>4</td>
-      <td style="text-align: left;text-indent: 2em">0.7710</td>
+      <td style="text-align: left;text-indent: 1em">0.7710</td>
     </tr>
     <tr>
       <td>23</td>
       <td>Pitt Pixel Persuaders</td>
       <td>5</td>
-      <td style="text-align: left;text-indent: 2em">0.7415</td>
+      <td style="text-align: left;text-indent: 1em">0.7415</td>
     </tr>
     <tr style="font-weight: normal">
       <td>24</td>
       <td>KPAS</td>
       <td>1</td>
-      <td style="text-align: left;text-indent: 2em">0.7097 &nbsp;&nbsp;&nbsp;&nbsp;&starf;</td>
+      <td style="text-align: left;text-indent: 1em">0.7097 &nbsp;&nbsp;&nbsp;&starf;</td>
     </tr>
     <tr style="font-weight: normal">
       <td>25</td>
       <td>ACT-CS</td>
       <td>4</td>
-      <td style="text-align: left;text-indent: 2em">0.6325 &nbsp;&nbsp;&nbsp;&nbsp;&starf;</td>
+      <td style="text-align: left;text-indent: 1em">0.6325 &nbsp;&nbsp;&nbsp;&starf;</td>
     </tr>
     <tr>
       <td>26</td>
       <td>ACT-CS</td>
       <td>3</td>
-      <td style="text-align: left;text-indent: 2em">0.6178</td>
+      <td style="text-align: left;text-indent: 1em">0.6178</td>
     </tr>
     <tr>
       <td>27</td>
       <td>ACT-CS</td>
       <td>2</td>
-      <td style="text-align: left;text-indent: 2em">0.6116</td>
+      <td style="text-align: left;text-indent: 1em">0.6116</td>
     </tr>
     <tr>
       <td>28</td>
       <td>ACT-CS</td>
       <td>1</td>
-      <td style="text-align: left;text-indent: 2em">0.5863</td>
+      <td style="text-align: left;text-indent: 1em">0.5863</td>
     </tr>
     <tr>
       <td>29</td>
       <td>IUST</td>
       <td>3</td>
-      <td style="text-align: left;text-indent: 2em">0.5680</td>
+      <td style="text-align: left;text-indent: 1em">0.5680</td>
     </tr>
     <tr>
       <td>30</td>
       <td>Pitt Pixel Persuaders</td>
       <td>3</td>
-      <td style="text-align: left;text-indent: 2em">0.5285</td>
+      <td style="text-align: left;text-indent: 1em">0.5285</td>
     </tr>
     <tr style="font-weight: normal">
       <td>31</td>
       <td>feeds</td>
       <td>1</td>
-      <td style="text-align: left;text-indent: 2em">0.4418 &nbsp;&nbsp;&nbsp;&nbsp;&starf;</td>
+      <td style="text-align: left;text-indent: 1em">0.4418 &nbsp;&nbsp;&nbsp;&starf;</td>
     </tr>
 
     </table>
@@ -402,7 +402,7 @@
             <th>Rank</th>
         <th>Team Name</th>
         <th>Attempt</th>
-        <th style="text-align: left;text-indent: 2em">Score</th>
+        <th style="text-align: left;text-indent: 1em">Score</th>
         </tr>
     </thead>
     <tbody>
@@ -410,127 +410,127 @@
       <td>1</td>
       <td>feeds</td>
       <td>1</td>
-      <td style="text-align: left;text-indent: 2em">0.5561 &nbsp;&nbsp;&nbsp;&nbsp;&starf;</td>
+      <td style="text-align: left;text-indent: 1em">0.5561 &nbsp;&nbsp;&nbsp;&starf;</td>
     </tr>
     <tr style="font-weight: normal">
       <td>2</td>
       <td>KPAS</td>
       <td>1</td>
-      <td style="text-align: left;text-indent: 2em">0.5417 &nbsp;&nbsp;&nbsp;&nbsp;&starf;</td>
+      <td style="text-align: left;text-indent: 1em">0.5417 &nbsp;&nbsp;&nbsp;&starf;</td>
     </tr>
     <tr>
       <td>3</td>
       <td>feeds</td>
       <td>2</td>
-      <td style="text-align: left;text-indent: 2em">0.5392</td>
+      <td style="text-align: left;text-indent: 1em">0.5392</td>
     </tr>
     <tr style="font-weight: normal">
       <td>4</td>
       <td>Mohammad Soltani</td>
       <td>5</td>
-      <td style="text-align: left;text-indent: 2em">0.5281 &nbsp;&nbsp;&nbsp;&nbsp;&starf;</td>
+      <td style="text-align: left;text-indent: 1em">0.5281 &nbsp;&nbsp;&nbsp;&starf;</td>
     </tr>
     <tr style="font-weight: normal">
       <td>5</td>
       <td>Semantists</td>
       <td>1</td>
-      <td style="text-align: left;text-indent: 2em">0.5045 &nbsp;&nbsp;&nbsp;&nbsp;&starf;</td>
+      <td style="text-align: left;text-indent: 1em">0.5045 &nbsp;&nbsp;&nbsp;&starf;</td>
     </tr>
     <tr style="font-weight: normal">
       <td>6</td>
       <td>ACT-CS</td>
       <td>1</td>
-      <td style="text-align: left;text-indent: 2em">0.5000 &nbsp;&nbsp;&nbsp;&nbsp;&starf;</td>
+      <td style="text-align: left;text-indent: 1em">0.5000 &nbsp;&nbsp;&nbsp;&starf;</td>
     </tr>
     <tr>
       <td>7</td>
       <td>Mohammad Soltani</td>
       <td>1</td>
-      <td style="text-align: left;text-indent: 2em">0.4875</td>
+      <td style="text-align: left;text-indent: 1em">0.4875</td>
     </tr>
     <tr>
       <td>8</td>
       <td>Mohammad Soltani</td>
       <td>4</td>
-      <td style="text-align: left;text-indent: 2em">0.4778</td>
+      <td style="text-align: left;text-indent: 1em">0.4778</td>
     </tr>
     <tr>
       <td>9</td>
       <td>Mohammad Soltani</td>
       <td>3</td>
-      <td style="text-align: left;text-indent: 2em">0.4762</td>
+      <td style="text-align: left;text-indent: 1em">0.4762</td>
     </tr>
     <tr>
       <td>10</td>
       <td>Semantists</td>
       <td>5</td>
-      <td style="text-align: left;text-indent: 2em">0.4659</td>
+      <td style="text-align: left;text-indent: 1em">0.4659</td>
     </tr>
     <tr style="font-weight: normal">
       <td>11</td>
       <td>IUST</td>
       <td>1</td>
-      <td style="text-align: left;text-indent: 2em">0.4609 &nbsp;&nbsp;&nbsp;&nbsp;&starf;</td>
+      <td style="text-align: left;text-indent: 1em">0.4609 &nbsp;&nbsp;&nbsp;&starf;</td>
     </tr>
     <tr>
       <td>12</td>
       <td>Mohammad Soltani</td>
       <td>2</td>
-      <td style="text-align: left;text-indent: 2em">0.4545</td>
+      <td style="text-align: left;text-indent: 1em">0.4545</td>
     </tr>
     <tr>
       <td>13</td>
       <td>ACT-CS</td>
       <td>4</td>
-      <td style="text-align: left;text-indent: 2em">0.4432</td>
+      <td style="text-align: left;text-indent: 1em">0.4432</td>
     </tr>
     <tr>
       <td>14</td>
       <td>ACT-CS</td>
       <td>3</td>
-      <td style="text-align: left;text-indent: 2em">0.4348</td>
+      <td style="text-align: left;text-indent: 1em">0.4348</td>
     </tr>
     <tr>
       <td>15</td>
       <td>Semantists</td>
       <td>4</td>
-      <td style="text-align: left;text-indent: 2em">0.4222</td>
+      <td style="text-align: left;text-indent: 1em">0.4222</td>
     </tr>
     <tr>
       <td>16</td>
       <td>Semantists</td>
       <td>2</td>
-      <td style="text-align: left;text-indent: 2em">0.4141</td>
+      <td style="text-align: left;text-indent: 1em">0.4141</td>
     </tr>
     <tr style="font-weight: normal">
       <td>17</td>
       <td>KnowComp</td>
       <td>1</td>
-      <td style="text-align: left;text-indent: 2em">0.3922 &nbsp;&nbsp;&nbsp;&nbsp;&starf;</td>
+      <td style="text-align: left;text-indent: 1em">0.3922 &nbsp;&nbsp;&nbsp;&starf;</td>
     </tr>
     <tr style="font-weight: normal">
       <td>18</td>
       <td>GC-HUNTER</td>
       <td>1</td>
-      <td style="text-align: left;text-indent: 2em">0.3832 &nbsp;&nbsp;&nbsp;&nbsp;&starf;</td>
+      <td style="text-align: left;text-indent: 1em">0.3832 &nbsp;&nbsp;&nbsp;&starf;</td>
     </tr>
     <tr>
       <td>19</td>
       <td>ACT-CS</td>
       <td>2</td>
-      <td style="text-align: left;text-indent: 2em">0.3125</td>
+      <td style="text-align: left;text-indent: 1em">0.3125</td>
     </tr>
     <tr>
       <td>20</td>
       <td>Semantists</td>
       <td>3</td>
-      <td style="text-align: left;text-indent: 2em">0.2838</td>
+      <td style="text-align: left;text-indent: 1em">0.2838</td>
     </tr>
     <tr style="font-weight: normal">
       <td>21</td>
       <td>Pitt Pixel Persuaders</td>
       <td>1</td>
-      <td style="text-align: left;text-indent: 2em"> 0.1217 &nbsp;&nbsp;&nbsp;&nbsp;&starf;</td>
+      <td style="text-align: left;text-indent: 1em"> 0.1217 &nbsp;&nbsp;&nbsp;&starf;</td>
     </tr>
 
     </table>
