--- a/index.html
+++ b/index.html
@@ -77,11 +77,12 @@
 
             src: url('chrome-extension://liecbddmkiiihnedobmlmillhodjkdmb/fonts/CircularXXWeb-Black.woff2') format('woff2');
         }
-    th, td {
-        /*border: 1px solid #ddd;*/
-        padding: 7.7px;
-        text-align: center;
+        th, td {
+            /*border: 1px solid #ddd;*/
+            padding: 7.7px;
+            text-align: center;
         }
+
     </style>
 </head>
 <body>
@@ -590,13 +591,32 @@
         <!--        <h3 id="system-description-paper-submission-information">Paper Submission Information</h3>-->
         <p>By default, we only accept short papers (at most 4 pages, including references and optional appendix). All
             papers will be treated equally in the workshop proceedings. Moreover, authors are expected to adhere to the
-            ethical code set out in the ACL Code of Ethics. Submissions that violate any of the policies will be
-            rejected without review.
+            ethical code set out in the ACL <a href="https://www.aclweb.org/portal/content/acl-code-ethics">Code of
+            Ethics</a>. Submissions that violate any of the policies will be rejected without review. </p>
 
-        <p>Please use the <a href="https://2023.emnlp.org/calls/style-and-formatting/">EMNLP 2023 style sheets</a> for
-            formatting your paper. </p>
+        <p><strong>At least one</strong> of the authors is required to be a reviewer and fill out this
+            <a href="https://forms.gle/2cWKEdUdb963oiAf7">Reviewer Form</a>. We will implement a <strong>double-blind review</strong>.</p>
 
-        <p><strong>Paper Submission:</strong> address is to be announced.</p>
+            <p>Structure of a system description paper could look as follows:</p>
+        <ul>
+          <li>Abstract</li>
+          <li>Introduction</li>
+          <li>Related work</li>
+          <li>Task/Data</li>
+          <li>Description of your approach</li>
+          <li>Experiments &amp; Results
+            <ul style="margin: 0px">
+              <li>E.g., analyse your results and/or do an error analysis.</li>
+              <li>E.g., analyze the result across topics or within each topic.</li>
+            </ul>
+          </li>
+          <li>Conclusion</li>
+          <li>References</li>
+        </ul>
+
+        <p><strong>Paper Format</strong>: <a href="https://2023.emnlp.org/calls/style-and-formatting/">
+            EMNLP 2023 style sheets</a>.</p>
+        <p><strong>Paper Submission Portal:</strong> TBA.</p>
 
         <!--Please use the CAMERA-READY, non-anonymized option.-->
 
