--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
         <p><strong>At least one</strong> of the authors is required to be a reviewer and fill out this
             <a href="https://forms.gle/2cWKEdUdb963oiAf7">Reviewer Form</a>. We will implement a double-blind review.</p>
 
-            <p>Structure of a system description paper could look as follows:</p> 
+            <p>Structure of a system description paper could look as follows:</p>
         <ul>
           <li>Abstract</li>
           <li>Introduction</li>
@@ -608,6 +608,7 @@
             <ul style="margin: 0px">
               <li>E.g., analyse your results and/or do an error analysis.</li>
               <li>E.g., analyze the result across topics or within each topic.</li>
+              <li>E.g., add more experiments (if needed) based on your submission.</li>
             </ul>
           </li>
           <li>Conclusion</li>
