--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
         <p class="view"><a href="https://github.com/ImageArg/ImageArg-Shared-Task">View Project Code on GitHub
             <small>ImageArg/ImageArg-Shared-Task</small></a></p>
         <p class="view"><a style="color: red">Important Announcement:</a><br>
+            <b>[08/02]</b> Call for system description papers! See "Call for Papers" section. <br>
             <b>[08/01]</b> Shared task leaderboard is out! <br>
             <b>[07/19]</b> The submission (predicted results) deadline is extended to 07/26 (AoE). <br>
             <b>[07/17]</b> The task submission (predicted results) portal is open <a href="https://docs.google.com/forms/d/e/1FAIpQLScT-JU8FHu1Eoa1Eq1XzCfg9HBvFdoutxXL5lMTI6NnKTt6yg/viewform">here</a>.<br>
