--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
 
         <p>
             The ImageArg Shared Task invites the submission of system description papers from teams
-            that have participated. Accepted papers will be published in the proceeding of <a
+            that have participated and made a successful submission. Accepted papers will be published in the proceeding of <a
                 href="https://argmining-org.github.io/2023/">The 10th ArgMining Workshop</a>.
 
         </p>
