--- a/index.html
+++ b/index.html
@@ -583,8 +583,8 @@
         <h2 id="system-description-paper-submission">3. Call for Papers (System Description Papers)</h2>
 
         <p>
-            The ImageArg Shared Task invites the submission of system description papers from teams
-            that have successfully participated. Accepted papers will be published in the proceeding of <a
+            The ImageArg Shared Task invites the submission of system description papers from all the teams
+            that have a successful submission to the leaderboard. Accepted papers will be published in the proceeding of <a
                 href="https://argmining-org.github.io/2023/">The 10th ArgMining Workshop</a>.
 
         </p>
