--- a/index.html
+++ b/index.html
@@ -551,8 +551,8 @@
             monitor the
             dataset to provide data patches that will replace invalid tweets with new annotated ones. Participants are
             required to fill out the <a
-                    href="CLOSED">Google 
-                Form (Invalid)</a> in order to receive data patches and the shared task updates.</p>
+                    href="https://forms.gle/ZJ2HFjSekXb8xkd87">Google
+                Form (CLOSED)</a> in order to receive data patches and the shared task updates.</p>
 
         <p>Participants are allowed to extend only the training set with further (synthetic) samples. However, if do
             that, participants have to describe and the algorithm which extends the training set in the system
