--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             multimodal persuasiveness techniques.</p>
 
         <p>Participants are welcome to submit system description papers for the shared task. Accepted papers will be
-            published in the proceeding of <a
+            published in the proceedings of <a
                     href="https://argmining-org.github.io/2023/">The 10th ArgMining Workshop</a>.
 
         To participate, please fill in this <a
@@ -584,7 +584,7 @@
 
         <p>
             The ImageArg Shared Task invites the submission of system description papers from all the teams
-            that have a successful submission to the leaderboard. Accepted papers will be published in the proceeding of <a
+            that have a successful submission to the leaderboard. Accepted papers will be published in the proceedings of <a
                 href="https://argmining-org.github.io/2023/">The 10th ArgMining Workshop</a>.
 
         </p>
